<resources>
    <string name="app_name">InsideOut</string>
    <string name="sadness">Sadness</string>
    <string name="anger">Anger</string>
    <string name="anxiety">Anxiety</string>
    <string name="embarrassment">Embarrassment</string>>
    <string name="fear">Fear</string>
    <string name="sleep">Sleep</string>
    <string name="play_music">Play Music</string>
    <string name="stop_music">Stop Music</string>
    <string name="image">image</string>
</resources>