<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ego.EgoFragment">

    <ImageView
        android:id="@+id/ivPoster"
        android:layout_width="184dp"
        android:layout_height="316dp"
        android:src="@drawable/inside_out"
        app:layout_constraintBottom_toTopOf="@id/switchOptimism"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switchHappiness"
        android:layout_marginHorizontal="64dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:track="@drawable/bg_track"
        android:thumb="@drawable/ic_thumb"
        android:scaleX="2"
        android:scaleY="2"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvHappiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sadness"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/switchHappiness"
        app:layout_constraintStart_toStartOf="@id/switchHappiness"
        app:layout_constraintEnd_toEndOf="@id/switchHappiness"
        android:layout_marginVertical="16dp"/>

    <Switch
        android:id="@+id/switchOptimism"
        android:layout_marginHorizontal="64dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:track="@drawable/bg_track"
        android:thumb="@drawable/ic_thumb"
        android:scaleX="2"
        android:scaleY="2"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/switchHappiness"/>

    <TextView
        android:id="@+id/tvOptimism"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anger"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/switchOptimism"
        app:layout_constraintStart_toStartOf="@id/switchOptimism"
        app:layout_constraintEnd_toEndOf="@id/switchOptimism"
        android:layout_marginTop="16dp"/>


    <Switch
        android:id="@+id/switchKindness"
        android:layout_marginHorizontal="64dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:track="@drawable/bg_track"
        android:thumb="@drawable/ic_thumb"
        android:scaleX="2"
        android:scaleY="2"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/switchOptimism"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvKindness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anxiety"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/switchKindness"
        app:layout_constraintStart_toStartOf="@id/switchKindness"
        app:layout_constraintEnd_toEndOf="@id/switchKindness"
        android:layout_marginTop="16dp"/>

    <Switch
        android:id="@+id/switchGiving"
        android:layout_marginHorizontal="64dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:track="@drawable/bg_track"
        android:thumb="@drawable/ic_thumb"
        android:scaleX="2"
        android:scaleY="2"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        app:layout_constraintTop_toBottomOf="@id/tvHappiness"
        android:layout_marginVertical="32dp"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvGiving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/embarrassment"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/switchGiving"
        app:layout_constraintStart_toStartOf="@id/switchGiving"
        app:layout_constraintEnd_toEndOf="@id/switchGiving"
        android:layout_marginTop="16dp"/>

    <Switch
        android:id="@+id/switchRespect"
        android:layout_marginHorizontal="64dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:track="@drawable/bg_track"
        android:thumb="@drawable/ic_thumb"
        android:scaleX="2"
        android:scaleY="2"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        app:layout_constraintTop_toBottomOf="@id/tvOptimism"
        app:layout_constraintStart_toEndOf="@id/switchGiving"
        android:layout_marginVertical="32dp" />

    <TextView
        android:id="@+id/tvRespect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fear"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/switchRespect"
        app:layout_constraintStart_toStartOf="@id/switchRespect"
        app:layout_constraintEnd_toEndOf="@id/switchRespect"
        android:layout_marginTop="16dp"/>

    <Switch
        android:id="@+id/switchEgo"
        android:layout_marginHorizontal="64dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:track="@drawable/bg_track"
        android:thumb="@drawable/ic_thumb"
        android:scaleX="2"
        android:scaleY="2"
        android:checked="true"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        app:layout_constraintTop_toBottomOf="@id/tvKindness"
        app:layout_constraintStart_toEndOf="@id/switchRespect"
        android:layout_marginVertical="32dp" />

    <TextView
        android:id="@+id/tvEgo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sleep"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/switchEgo"
        app:layout_constraintStart_toStartOf="@id/switchEgo"
        app:layout_constraintEnd_toEndOf="@id/switchEgo"
        android:layout_marginTop="16dp"/>





</androidx.constraintlayout.widget.ConstraintLayout>